--- a/Changes
+++ b/Changes
@@ -1,4 +1,13 @@
 ---
+version: 0.11
+date:    Wed Jun 23 18:32:40 EDT 2004
+changes:
+- Documentation touch-ups
+- Created new_page.png from stock_about.png and stock_new.png
+- Recent Changes icon is now the same as the Previous Revision icon
+- Add GPL as LICENSE file for consistancy
+
+---
 version: 0.10
 date:    Mon Jun 21 06:57:09 PDT 2004
 changes:
