--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.12
+date:    Wed Jun 23 20:48:49 EDT 2004
+changes:
+- It helps if the module returns true
+
+---
 version: 0.11
 date:    Wed Jun 23 18:32:40 EDT 2004
 changes:
