Import of IAN/Kwiki-Icons-Gnome-0.13 from CPAN.
gitpan-cpan-distribution: Kwiki-Icons-Gnome
gitpan-cpan-version:      0.13
gitpan-cpan-path:         IAN/Kwiki-Icons-Gnome-0.13.tar.gz
gitpan-cpan-author:       IAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.13
+date:    Thu Jun 24 08:44:50 EDT 2004
+changes:
+- Just kidding about recent changes, I was confused. The *Revisions* button is now the same as the Previous Revision icon.
+
+---
 version: 0.12
 date:    Wed Jun 23 20:48:49 EDT 2004
 changes:
