Import of IAN/Kwiki-Icons-Gnome-0.14 from CPAN.
gitpan-cpan-distribution: Kwiki-Icons-Gnome
gitpan-cpan-version:      0.14
gitpan-cpan-path:         IAN/Kwiki-Icons-Gnome-0.14.tar.gz
gitpan-cpan-author:       IAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.14
+date:    Tue Jul 20 00:07:18 EDT 2004
+changes:
+- Updated to work with Kwiki-0.32
+
+---
 version: 0.13
 date:    Thu Jun 24 08:44:50 EDT 2004
 changes:
